@@ -18,6 +18,12 @@ October 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>
  * gui/Config.c: Likewise.
  * gui/LnxMain.c: Likewise.
  * gui/Gtk2Gui.c: Likewise.
+ * win32/pcsx.rc: Likewise.
+ * win32/pcsx.dsp: Likewise.
+ * win32/gui/ConfigurePlugins.c: Likewise.
+ * win32/gui/WndMain.c: Likewise.
+ * win32/pcsx.dev: Likewise.
+ * win32/resource.h: Likewise.
 
 October 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
